styling of skills section corrected to be more consistant with fourther part of the page, gaps, margin, text size adjusted

--- a/src/styles/SkillsSection.module.css
+++ b/src/styles/SkillsSection.module.css
@@ -5,6 +5,10 @@
     padding: 0px;
 }
 
+.horizontalSeparator {
+    width: 90%;
+}
+
 @media (min-width: 768px) {
     .skillsContainer {
         grid-template-columns: 1fr 1fr;
@@ -16,17 +20,19 @@
     border-radius: 10px;
     padding: 20px;
     text-align: center;
+    margin: 20px;
 }
 
 .skillTitle {
-    font-size: 1.5em;
-    margin-bottom: 10px;
+    margin: 10px;
+
 }
 
 .skillGrid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    gap: 10px;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+    margin: 20px;
 }
 
 .skillItem {
@@ -42,6 +48,7 @@
 
 .skillName {
     margin: 5px 0;
+    font-family: monospace;
 }
 
 .skillLevel {
